--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,3 +8,8 @@ steps:
 # This step will deploy the new container image to cloud run
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['run','deploy', 'fnote-taking-service', '--image=gcr.io/$PROJECT_ID/fnote-taking', '--region=us-west4', '--allow-unauthenticated']
+
+build:
+  service_account: 'agm-api@agm-datalake.iam.gserviceaccount.com'
+  options:
+    logging: CLOUD_LOGGING_ONLY
