--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,24 @@
 steps:
-# This step will build and push new container image to "google container registry(GCR)"
+# Build the container image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/fnote-taking', '.']
+
+# Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/fnote-taking']
 
-# This step will deploy the new container image to cloud run
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['run','deploy', 'fnote-taking-service', '--image=gcr.io/$PROJECT_ID/fnote-taking', '--region=us-west4', '--allow-unauthenticated']
+# Deploy container image to Cloud Run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args:
+  - 'run'
+  - 'deploy'
+  - 'fnote-taking-service'
+  - '--image=gcr.io/$PROJECT_ID/fnote-taking'
+  - '--region=us-west4'
+  - '--allow-unauthenticated'
+  - '--port=8080'  # Explicitly set the port
+  - '--set-env-vars=PORT=8080'  # Set PORT environment variable
 
 options:
   logging: CLOUD_LOGGING_ONLY
