--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 firebase_admin==6.5.0
 Flask==3.0.3
-Flask_Cors==4.0.0
+Flask_Cors==5.0.0
 Flask_JWT_Extended==4.6.0
 google_api_python_client==2.136.0
 google_auth_oauthlib==1.2.1
-ibapi==9.81.1.post1
 Jinja2==3.1.4
-numpy==2.0.2
+numpy==2.1.1
 pandas==2.2.3
 premailer==3.10.0
 pytz==2024.1
 Requests==2.32.3
 rich==13.9.1
-termcolor==2.4.0
+gunicorn==21.2.0
