Update template env to remember what secrets are used

--- a/template.env
+++ b/template.env
@@ -1,3 +1,10 @@
 PORT=5000
 DEV_MODE="true"
 EXTRA_DEBUG="false"
+
+# Google Secrets
+FIREBASE_ADMINSDK_CREDENTIALS=
+OAUTH_PYTHON_CREDENTIALS_ADMIN=
+OAUTH_PYTHON_CREDENTIALS_INFO=
+AGM_AUTHENTICATION_TOKEN=
+JWT_SECRET_KEY=
