--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ google_api_python_client==2.136.0
 google_auth_oauthlib==1.2.1
 firebase_admin==6.5.0
 google-cloud-secret-manager==2.23.1
+google-generativeai==0.8.5
 
 # Text Processing and Utilities
 beautifulsoup4==4.12.3
