Implement development mode logging and update configuration
- Added DEV_MODE variable to template.env for toggling between development and production logging.
- Enhanced Logger class to support different logging formats based on the DEV_MODE setting, utilizing Rich logging in development and plain logging in production.
- Updated logging methods to conditionally format messages based on the current mode, improving clarity and usability during development.

--- a/template.env
+++ b/template.env
@@ -1,2 +1,6 @@
 PORT=5000
+# Set to 'false' for plain logging in production (no Rich formatting)
+DEV_MODE=true
 CLIENT_PRIVATE_KEY=
+IBKR_HOST=
+IBKR_PORT=
