--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -2,7 +2,7 @@ name: Daily ETL Pipeline
 
 on:
   schedule:
-    - cron: '0 7 * * *'  # Every day at 7:00 AM UTC
+    - cron: '0 14 * * *'  # Every day at 2:00 PM UTC
   workflow_dispatch:       # Allows manual trigger
 
 jobs:
@@ -11,5 +11,15 @@ jobs:
     steps:
       - name: Run ETL Pipeline
         run: |
-          curl -H "Authorization: Bearer ${{ secrets.AUTHENTICATION_TOKENS }}" \
+          TOKEN_RESPONSE=$(curl -s -X POST \
+            -H "Content-Type: application/json" \
+            -d '{"token": "${{ secrets.AUTHENTICATION_TOKEN }}", "scopes": "all"}' \
+            https://api.agmtechnology.com/token)
+          ACCESS_TOKEN=$(echo "$TOKEN_RESPONSE" | jq -r '.access_token')
+          if [ "$ACCESS_TOKEN" = "null" ] || [ -z "$ACCESS_TOKEN" ]; then
+            echo "Failed to retrieve access token"
+            echo "$TOKEN_RESPONSE"
+            exit 1
+          fi
+          curl -H "Authorization: Bearer $ACCESS_TOKEN" \
                -X GET https://api.agmtechnology.com/reporting/run || exit 1
