--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -11,15 +11,29 @@ jobs:
     steps:
       - name: Run ETL Pipeline
         run: |
-          TOKEN_RESPONSE=$(curl -s -X POST \
+          # Request access token and capture response + status code
+          TOKEN_RESPONSE_WITH_STATUS=$(curl -s -w "\n%{http_code}" -X POST \
             -H "Content-Type: application/json" \
             -d '{"token": "${{ secrets.AUTHENTICATION_TOKEN }}", "scopes": "all"}' \
             https://api.agmtechnology.com/token)
+          HTTP_STATUS=$(echo "$TOKEN_RESPONSE_WITH_STATUS" | tail -n1)
+          TOKEN_RESPONSE=$(echo "$TOKEN_RESPONSE_WITH_STATUS" | sed '$d')
+          if [ "$HTTP_STATUS" != "200" ]; then
+            echo "Token request failed with status $HTTP_STATUS"
+            echo "$TOKEN_RESPONSE"
+            exit 1
+          fi
           ACCESS_TOKEN=$(echo "$TOKEN_RESPONSE" | jq -r '.access_token')
           if [ "$ACCESS_TOKEN" = "null" ] || [ -z "$ACCESS_TOKEN" ]; then
             echo "Failed to retrieve access token"
             echo "$TOKEN_RESPONSE"
             exit 1
           fi
-          curl -H "Authorization: Bearer $ACCESS_TOKEN" \
-               -X GET https://api.agmtechnology.com/reporting/run || exit 1
+          # Trigger reporting run and validate status code
+          REPORT_STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+               -H "Authorization: Bearer $ACCESS_TOKEN" \
+               -X GET https://api.agmtechnology.com/reporting/run)
+          if [ "$REPORT_STATUS" != "200" ]; then
+            echo "Reporting run request failed with status $REPORT_STATUS"
+            exit 1
+          fi
