Add document processing functionality and update ETL workflow
- Added a new endpoint for processing documents in the accounts module, allowing for auto-signing and uploading of IBKR forms.
- Enhanced the ETL workflow by improving error handling and restructuring the token request and reporting run steps for better clarity and output management.
- Updated requirements.txt to include the cryptography library for secure document handling.

--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -2,38 +2,74 @@ name: Daily ETL Pipeline
 
 on:
   schedule:
-    - cron: '0 14 * * *'  # Every day at 2:00 PM UTC
-  workflow_dispatch:       # Allows manual trigger
+    - cron: '0 14 * * *'   # Every day at 2 PM UTC
+  workflow_dispatch:        # Manual trigger
 
 jobs:
   etl:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Run ETL Pipeline
-        run: |
-          # Request access token and capture response + status code
-          TOKEN_RESPONSE_WITH_STATUS=$(curl -s -w "\n%{http_code}" -X POST \
-            -H "Content-Type: application/json" \
-            -d '{"token": "${{ secrets.AUTHENTICATION_TOKEN }}", "scopes": "all"}' \
-            https://api.agmtechnology.com/token)
-          HTTP_STATUS=$(echo "$TOKEN_RESPONSE_WITH_STATUS" | tail -n1)
-          TOKEN_RESPONSE=$(echo "$TOKEN_RESPONSE_WITH_STATUS" | sed '$d')
-          if [ "$HTTP_STATUS" != "200" ]; then
-            echo "Token request failed with status $HTTP_STATUS"
-            echo "$TOKEN_RESPONSE"
-            exit 1
-          fi
-          ACCESS_TOKEN=$(echo "$TOKEN_RESPONSE" | jq -r '.access_token')
-          if [ "$ACCESS_TOKEN" = "null" ] || [ -z "$ACCESS_TOKEN" ]; then
-            echo "Failed to retrieve access token"
-            echo "$TOKEN_RESPONSE"
-            exit 1
-          fi
-          # Trigger reporting run and validate status code
-          REPORT_STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
-               -H "Authorization: Bearer $ACCESS_TOKEN" \
-               -X GET https://api.agmtechnology.com/reporting/run)
-          if [ "$REPORT_STATUS" != "200" ]; then
-            echo "Reporting run request failed with status $REPORT_STATUS"
-            exit 1
-          fi
+    # 1 ─────────────────────────────────────────────────────────
+    - name: Request access token
+      id: token                # so we can reference outputs
+      run: |
+        response=$(curl -s -w "\n%{http_code}" -X POST \
+          -H "Content-Type: application/json" \
+          -d '{"token":"${{ secrets.AUTHENTICATION_TOKEN }}","scopes":"all"}' \
+          https://api.agmtechnology.com/token)
+
+        http_status=$(echo "$response" | tail -n1)
+        body=$(echo "$response" | sed '$d')
+
+        # expose for later steps
+        echo "http_status=$http_status"    >> "$GITHUB_OUTPUT"
+        echo "body=$body"                  >> "$GITHUB_OUTPUT"
+
+        if [ "$http_status" != "200" ]; then
+          echo "Token request failed with status $http_status"
+          exit 1
+        fi
+
+        access_token=$(echo "$body" | jq -r '.access_token')
+        if [ "$access_token" = "null" ] || [ -z "$access_token" ]; then
+          echo "access_token not found in response"
+          exit 1
+        fi
+        echo "access_token=$access_token"  >> "$GITHUB_OUTPUT"
+
+    # 2 ─────────────────────────────────────────────────────────
+    - name: Trigger reporting run
+      id: reporting
+      run: |
+        status=$(curl -s -o /dev/null -w "%{http_code}" \
+          -H "Authorization: Bearer ${{ steps.token.outputs.access_token }}" \
+          -X GET https://api.agmtechnology.com/reporting/run)
+
+        echo "http_status=$status" >> "$GITHUB_OUTPUT"
+
+        if [ "$status" != "200" ]; then
+          echo "Reporting run request failed with status $status"
+          exit 1
+        fi
+
+    # 3 ─────────────────────────────────────────────────────────
+    - name: Summarise results
+      run: |
+        {
+          echo "## ETL summary :clipboard:"
+          echo ""
+          echo "| Action | HTTP status |"
+          echo "| ------ | ----------- |"
+          echo "| Token request   | \`${{ steps.token.outputs.http_status }}\` |"
+          echo "| Reporting run   | \`${{ steps.reporting.outputs.http_status }}\` |"
+        } >> "$GITHUB_STEP_SUMMARY"
+
+    # 4 (Optional) ──────────────────────────────────────────────
+    # - name: Upload raw responses
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: etl-raw-responses
+    #     path: |
+    #       ${{ runner.temp }}/token-response.json
+    #       ${{ runner.temp }}/reporting-response.json
