Update Cloud Build workflow to invoke trigger instead of submitting build directly
- Changed the job name from "Submit Cloud Build" to "Invoke Cloud Build Trigger".
- Updated the command to run a Cloud Build trigger with specified branch and project parameters.

--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -21,6 +21,8 @@ jobs:
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v1
 
-      - name: Submit Cloud Build
+      - name: Invoke Cloud Build Trigger
         run: |
-          gcloud builds submit --config=cloudbuild.yaml --project=agm-datalake
+          gcloud builds triggers run TRIGGER_ID \
+            --branch=main \
+            --project=agm-datalake
