--- a/.github/workflows/cloudrun.yaml
+++ b/.github/workflows/cloudrun.yaml
@@ -13,12 +13,15 @@ jobs:
       - name: Checkout code (if needed)
         uses: actions/checkout@v4
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Auth to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCLOUD_SERVICE_KEY }}'
+
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: agm-datalake
-          service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
-          export_default_credentials: true
 
       - name: Force redeploy existing image
         run: |
