--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,12 +8,12 @@ steps:
         'build',
         '--no-cache',
         '-t',
-        'us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-hub',
+        'us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-api',
         '.'
       ]
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-hub']
+    args: ['push', 'us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-api']
 
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'gcloud'
@@ -22,9 +22,9 @@ steps:
         'run',
         'services',
         'update',
-        'agm-hub',
+          'agm-api',
         '--platform=managed',
         '--region=us-central1',
-        '--image=us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-hub',
+        '--image=us-central1-docker.pkg.dev/agm-datalake/cloud-run-source-deploy/agm-api',
         '--quiet'
       ]
