--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Auth to Google Cloud
         uses: google-github-actions/auth@v1
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: '${{ secrets.AGM_API_SERVICE_ACCOUNT_KEY }}'
 
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v1
