Update workflow configurations and add compile check
- Adjusted cron schedules in agreements-disclosures.yaml and etl.yaml for clarity on time zones.
- Modified cloudbuild.yaml to trigger on workflow completion instead of push events.
- Added a new compile.yml workflow for Python compilation checks and basic import tests.
- Cleaned up commented-out print statements in email.py, reporting.py, drive.py, and database_manager.py for improved code readability.

--- a/.github/workflows/agreements-disclosures.yaml
+++ b/.github/workflows/agreements-disclosures.yaml
@@ -2,7 +2,7 @@ name: Upload Agreements and Disclosures
 
 on:
   schedule:
-    - cron: '0 14 * * *'   # Every day at 2 PM UTC
+    - cron: '0 13 * * *'   # Every day at 1 PM UTC (7:00 AM CST)
   workflow_dispatch:        # Manual trigger
 
 jobs:
