--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -13,44 +13,54 @@ jobs:
       # 1 ─────────────────────────────────────────────────────────
       - name: Request access token
         id: token
-        run: |
-          response=$(curl -s -w "\n%{http_code}" -X POST \
-            -H "Content-Type: application/json" \
-            -d '{"token":"${{ secrets.AUTHENTICATION_TOKEN }}","scopes":"all"}' \
-            https://api.agmtechnology.com/token)
+        uses: Wandalen/wretry.action@v2
+        with:
+          command: |
+            response=$(curl -s -w "\n%{http_code}" -X POST \
+              -H "Content-Type: application/json" \
+              -d '{"token":"${{ secrets.AUTHENTICATION_TOKEN }}","scopes":"all"}' \
+              https://api.agmtechnology.com/token)
 
-          http_status=$(echo "$response" | tail -n1)
-          body=$(echo "$response" | sed '$d')
+            http_status=$(echo "$response" | tail -n1)
+            body=$(echo "$response" | sed '$d')
 
-          echo "http_status=$http_status" >> "$GITHUB_OUTPUT"
-          echo "body=$body"               >> "$GITHUB_OUTPUT"
+            echo "http_status=$http_status" >> "$GITHUB_OUTPUT"
+            echo "body=$body"               >> "$GITHUB_OUTPUT"
 
-          if [ "$http_status" != "200" ]; then
-            echo "Token request failed with status $http_status"
-            exit 1
-          fi
+            if [ "$http_status" != "200" ]; then
+              echo "Token request failed with status $http_status"
+              exit 1
+            fi
 
-          access_token=$(echo "$body" | jq -r '.access_token')
-          if [ "$access_token" = "null" ] || [ -z "$access_token" ]; then
-            echo "access_token not found in response"
-            exit 1
-          fi
-          echo "access_token=$access_token" >> "$GITHUB_OUTPUT"
+            access_token=$(echo "$body" | jq -r '.access_token')
+            if [ "$access_token" = "null" ] || [ -z "$access_token" ]; then
+              echo "access_token not found in response"
+              exit 1
+            fi
+            echo "access_token=$access_token" >> "$GITHUB_OUTPUT"
+          retry_count: 1         # total attempts = 1 original + 1 retry
+          retry_delay: 5000     # 5-second wait between attempts (milliseconds)
+          retry_on: error
 
       # 2 ─────────────────────────────────────────────────────────
       - name: Trigger reporting run
         id: reporting
-        run: |
-          status=$(curl -s -o /dev/null -w "%{http_code}" \
-            -H "Authorization: Bearer ${{ steps.token.outputs.access_token }}" \
-            -X GET https://api.agmtechnology.com/reporting/run)
+        uses: Wandalen/wretry.action@v2
+        with:
+          command: |
+            status=$(curl -s -o /dev/null -w "%{http_code}" \
+              -H "Authorization: Bearer ${{ steps.token.outputs.access_token }}" \
+              -X GET https://api.agmtechnology.com/reporting/run)
 
-          echo "http_status=$status" >> "$GITHUB_OUTPUT"
+            echo "http_status=$status" >> "$GITHUB_OUTPUT"
 
-          if [ "$status" != "200" ]; then
-            echo "Reporting run request failed with status $status"
-            exit 1
-          fi
+            if [ "$status" != "200" ]; then
+              echo "Reporting run request failed with status $status"
+              exit 1
+            fi
+          retry_count: 9 # total attempts = 1 original + 9 retries
+          retry_delay: 600000 # 10-minute wait between attempts (milliseconds)
+          retry_on: error
 
       # 3 ─────────────────────────────────────────────────────────
       - name: Summarise results
