--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -38,6 +38,7 @@ jobs:
               exit 1
             fi
             echo "access_token=$access_token" >> "$GITHUB_OUTPUT"
+            echo "ACCESS_TOKEN=$access_token" >> "$GITHUB_ENV"
           attempt_limit: 2      # 1 original + 1 retry
           attempt_delay: 5000   # 5-second pause (ms)
 
@@ -48,7 +49,7 @@ jobs:
         with:
           command: |
             status=$(curl -s -o /dev/null -w "%{http_code}" \
-              -H "Authorization: Bearer ${{ steps.token.outputs.access_token }}" \
+              -H "Authorization: Bearer $ACCESS_TOKEN" \
               -X GET https://api.agmtechnology.com/reporting/run)
 
             echo "http_status=$status" >> "$GITHUB_OUTPUT"
