Enhance ETL workflow by adding output for HTTP response body and access token
- Added output for the HTTP response body to the GitHub Actions workflow for better debugging.
- Included access token in both the GitHub output and environment variables to streamline token management.

--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -23,6 +23,7 @@ jobs:
           body=$(echo "$response" | sed '$d')
 
           echo "http_status=$http_status" >> "$GITHUB_OUTPUT"
+          echo "body=$body"               >> "$GITHUB_OUTPUT"
 
           if [ "$http_status" != "200" ]; then
             echo "Token request failed with status $http_status"
@@ -34,6 +35,8 @@ jobs:
             echo "access_token not found in response"
             exit 1
           fi
+          echo "access_token=$access_token" >> "$GITHUB_OUTPUT"
+          echo "ACCESS_TOKEN=$access_token" >> "$GITHUB_ENV"
 
       # 2 ─────────────────────────────────────────────────────────
       - name: Trigger reporting run
