--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -10,42 +10,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1 ─────────────────────────────────────────────────────────
-      - name: Request access token
-        id: token
-        run: |
-          response=$(curl -s -w "\n%{http_code}" -X POST \
-            -H "Content-Type: application/json" \
-            -d '{"token":"${{ secrets.AUTHENTICATION_TOKEN }}","scopes":"all"}' \
-            https://api.agmtechnology.com/token)
-
-          http_status=$(echo "$response" | tail -n1)
-          body=$(echo "$response" | sed '$d')
-
-          echo "http_status=$http_status" >> "$GITHUB_OUTPUT"
-          echo "body=$body"               >> "$GITHUB_OUTPUT"
-
-          if [ "$http_status" != "200" ]; then
-            echo "Token request failed with status $http_status"
-            exit 1
-          fi
-
-          access_token=$(echo "$body" | jq -r '.access_token')
-          if [ "$access_token" = "null" ] || [ -z "$access_token" ]; then
-            echo "access_token not found in response"
-            exit 1
-          fi
-          echo "access_token=$access_token" >> "$GITHUB_OUTPUT"
-          echo "ACCESS_TOKEN=$access_token" >> "$GITHUB_ENV"
-
-      # 2 ─────────────────────────────────────────────────────────
-      - name: Trigger reporting run
+      # ─────────────────────────────────────────────────────────────
+      - name: Request token and trigger reporting run
         id: reporting
         uses: Wandalen/wretry.action@v2
         with:
           command: |
+            # Fetch access token
+            response=$(curl -s -w "\n%{http_code}" -X POST \
+              -H "Content-Type: application/json" \
+              -d '{"token":"${{ secrets.AUTHENTICATION_TOKEN }}","scopes":"all"}' \
+              https://api.agmtechnology.com/token)
+
+            http_status=$(echo "$response" | tail -n1)
+            body=$(echo "$response" | sed '$d')
+
+            if [ "$http_status" != "200" ]; then
+              echo "Token request failed with status $http_status"
+              exit 1
+            fi
+
+            access_token=$(echo "$body" | jq -r '.access_token')
+            if [ "$access_token" = "null" ] || [ -z "$access_token" ]; then
+              echo "access_token not found in response"
+              exit 1
+            fi
+
+            # Trigger reporting run
             status=$(curl -s -o /dev/null -w "%{http_code}" \
-              -H "Authorization: Bearer $ACCESS_TOKEN" \
+              -H "Authorization: Bearer $access_token" \
               -X GET https://api.agmtechnology.com/reporting/run)
 
             echo "http_status=$status" >> "$GITHUB_OUTPUT"
@@ -54,7 +47,7 @@ jobs:
               echo "Reporting run request failed with status $status"
               exit 1
             fi
-          attempt_limit: 9     # 1 original + 9 retries
+          attempt_limit: 12 # 1 original + 5 retries (1 hour)
           attempt_delay: 600000 # 10-minute pause (ms)
           
   notify-success:
