--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -86,27 +86,44 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps:
-      - name: Compose email body file
+      - name: Compose HTML email body
         run: |
           SUMMARY_DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
           # Decode %0A into real newlines for tasks and leads
           TASKS=$(echo "${{ needs.fetch-summary.outputs.tasks }}" | sed 's/%0A/\n/g')
           LEADS=$(echo "${{ needs.fetch-summary.outputs.leads }}" | sed 's/%0A/\n/g')
+          # Convert "- item" markdown to <ul><li> list
+          list_to_html() {
+            local input="$1"
+            if [ -z "$input" ] || [ "$input" = "No pending tasks found." ] || [ "$input" = "No leads found." ]; then
+              echo "<p><em>$input</em></p>"
+              return
+            fi
+            echo "<ul>";
+            while IFS= read -r line; do
+              trimmed="${line#*- }"  # remove leading '- '
+              echo "  <li>$trimmed</li>";
+            done <<< "$input"
+            echo "</ul>";
+          }
+
+          TASKS_HTML=$(list_to_html "$TASKS")
+          LEADS_HTML=$(list_to_html "$LEADS")
+
           {
-            echo "Hello AGM team,"
-            echo ""
-            echo "Here is the daily summary as of $SUMMARY_DATE:"
-            echo ""
-            echo "**Pending Tasks**"
-            echo ""
-            echo "$TASKS"
-            echo ""
-            echo "**Leads**"
-            echo ""
-            echo "$LEADS"
-            echo ""
-            echo "Have a great day!"
-          } > email_body.md
+            echo "<!DOCTYPE html>"
+            echo "<html lang=\"en\">"
+            echo "<head><meta charset=\"UTF-8\"><title>Daily Summary</title></head>"
+            echo "<body style=\"font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;line-height:1.6;color:#2D3748;\">"
+            echo "<div style=\"max-width:600px;margin:40px auto;padding:40px;background:#fff;border-radius:12px;box-shadow:0 4px 6px rgba(0,0,0,0.05);\">"
+            echo "<h1 style=\"text-align:center;color:#1A365D;\">Daily Summary ($SUMMARY_DATE)</h1>"
+            echo "<h2 style=\"color:#1A365D;\">Pending Tasks</h2>"
+            echo "$TASKS_HTML"
+            echo "<h2 style=\"color:#1A365D;\">Leads</h2>"
+            echo "$LEADS_HTML"
+            echo "<p>Have a great day!</p>"
+            echo "</div></body></html>"
+          } > email_body.html
 
       - name: Send daily summary email
         uses: dawidd6/action-send-mail@v3
@@ -118,8 +135,7 @@ jobs:
           subject: "📬 Daily Pending Tasks & Leads Summary"
           to: aa@agmtechnology.com,cr@agmtechnology.com
           from: aa@agmtechnology.com
-          body: file://email_body.md
-          content_type: text/markdown
+          html_body: file://email_body.html
 
   notify-failure:
     needs: fetch-summary
