Refactor daily summary workflow to improve output formatting
- Updated the output section to export both plain text and raw JSON for pending tasks, enhancing data accessibility for downstream steps.
- This change ensures better compatibility and clarity in the workflow's output handling.

--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -55,8 +55,9 @@ jobs:
             pending_tasks=$(echo "$tasks_body" | jq -r '.pending_tasks[] | .description')
 
             # ─────────────────────────────────────────────────────────────
-            # 3. Export raw JSON for downstream steps
-            echo "pending_tasks_raw=$tasks_body" >> "$GITHUB_OUTPUT"
+            # 3. Export outputs for downstream steps
+            printf "pending_tasks<<EOF\n%s\nEOF\n" "$pending_tasks" >> "$GITHUB_OUTPUT"
+            printf "pending_tasks_raw<<EOF\n%s\nEOF\n" "$tasks_body" >> "$GITHUB_OUTPUT"
             
           attempt_limit: 24     # Retry up to 24 times (10-min interval) like other jobs
           attempt_delay: 600000 # 10-minute pause (ms)
