Refactor daily summary workflow to streamline task output
- Removed raw JSON output for pending tasks, simplifying the data provided to downstream steps.
- Updated email composition to reflect the change, ensuring clarity in the daily summary without raw data.

--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       tasks: ${{ steps.fetch.outputs.pending_tasks }}
-      tasks_raw: ${{ steps.fetch.outputs.pending_tasks_raw }}
     steps:
       - name: Request token and fetch tasks
         id: fetch
@@ -57,7 +56,6 @@ jobs:
             # ─────────────────────────────────────────────────────────────
             # 3. Export outputs for downstream steps
             printf "pending_tasks<<EOF\n%s\nEOF\n" "$pending_tasks" >> "$GITHUB_OUTPUT"
-            printf "pending_tasks_raw<<EOF\n%s\nEOF\n" "$tasks_body" >> "$GITHUB_OUTPUT"
             
           attempt_limit: 24     # Retry up to 24 times (10-min interval) like other jobs
           attempt_delay: 600000 # 10-minute pause (ms)
@@ -70,13 +68,13 @@ jobs:
       - name: Prepare email body
         id: prep_email
         env:
-          TASKS_JSON: ${{ needs.fetch-summary.outputs.tasks_raw }}
+          TASKS_JSON: ${{ needs.fetch-summary.outputs.tasks }}
         run: |
           SUMMARY_DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
           printf "body<<EOF\n" >> "$GITHUB_OUTPUT"
           printf "Hello AGM team,\n\n" >> "$GITHUB_OUTPUT"
           printf "Here is the daily summary as of $SUMMARY_DATE:\n\n" >> "$GITHUB_OUTPUT"
-          printf "Pending Tasks (raw JSON):\n$TASKS_JSON\n\n" >> "$GITHUB_OUTPUT"
+          printf "Pending Tasks:\n$TASKS_JSON\n\n" >> "$GITHUB_OUTPUT"
           printf "Have a great day!\n" >> "$GITHUB_OUTPUT"
           printf "EOF\n" >> "$GITHUB_OUTPUT"
 
