Add debug logging for TASKS_JSON in daily summary workflow
- Introduced a debug echo statement to log the TASKS_JSON variable, aiding in troubleshooting and ensuring the correct data is being passed to downstream steps.
- This change enhances visibility into the workflow's data handling process.

--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -70,6 +70,7 @@ jobs:
         env:
           TASKS_JSON: ${{ needs.fetch-summary.outputs.tasks }}
         run: |
+          echo "TASKS_JSON: $TASKS_JSON"
           SUMMARY_DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
           printf "body<<EOF\n" >> "$GITHUB_OUTPUT"
           printf "Hello AGM team,\n\n" >> "$GITHUB_OUTPUT"
