Enhance daily summary workflow to include leftover pending tasks count
- Added a new output for the number of leftover pending tasks after extracting a maximum of 5 tasks, improving the detail of the daily summary.
- Updated email composition to inform users about the total number of pending tasks, enhancing clarity and actionability in the summary report.

--- a/.github/workflows/daily_summary.yml
+++ b/.github/workflows/daily_summary.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       pending_tasks: ${{ steps.fetch.outputs.pending_tasks }}
+      leftover_pending_tasks: ${{ steps.fetch.outputs.leftover_pending_tasks }}
     steps:
       - name: Request token and fetch tasks
         id: fetch
@@ -55,8 +56,13 @@ jobs:
               echo "Warning: tasks_body is empty" >&2
             fi
 
-            # Extract plain list of pending task descriptions (one per line)
-            pending_tasks=$(echo "$tasks_body" | jq -r '.pending_tasks[] | .description' 2>&1)
+            # Extract plain list of pending task descriptions (one per line) up to 5 tasks
+            pending_tasks=$(echo "$tasks_body" | jq -r '.pending_tasks[] | .description' | head -n 5 2>&1)
+
+            # Extract the total number of pending tasks
+            total_pending_tasks=$(echo "$tasks_body" | jq -r '.pending_tasks | length')
+            leftover_pending_tasks=$((total_pending_tasks - 5))
+
             echo "Pending tasks extracted: $pending_tasks" >&2
             if [ -z "$pending_tasks" ]; then
               echo "Warning: No pending tasks extracted (possibly empty list or jq mismatch)" >&2
@@ -66,7 +72,7 @@ jobs:
             # ─────────────────────────────────────────────────────────────
             # 3. Export outputs for downstream steps
             printf "pending_tasks<<EOF\n%s\nEOF\n" "$pending_tasks" >> "$GITHUB_OUTPUT"
-
+            printf "leftover_pending_tasks<<EOF\n%s\nEOF\n" "$leftover_pending_tasks" >> "$GITHUB_OUTPUT"
   notify:
     needs: fetch-summary
     runs-on: ubuntu-latest
@@ -76,6 +82,7 @@ jobs:
         id: prep_email
         env:
           TASKS_JSON: ${{ needs.fetch-summary.outputs.pending_tasks }}
+          LEFTOVER_PENDING_TASKS: ${{ needs.fetch-summary.outputs.leftover_pending_tasks }}
         run: |
           SUMMARY_DATE=$(date -u +"%Y-%m-%d %H:%M UTC")
           printf "body<<EOF\n" >> "$GITHUB_OUTPUT"
@@ -83,6 +90,8 @@ jobs:
           printf "Here is the daily summary as of $SUMMARY_DATE:\n\n" >> "$GITHUB_OUTPUT"
           printf "Pending Tasks:\n" >> "$GITHUB_OUTPUT"
           printf "$TASKS_JSON\n" >> "$GITHUB_OUTPUT"
+          printf "\nand $LEFTOVER_PENDING_TASKS more pending tasks.\n" >> "$GITHUB_OUTPUT"
+          printf "\nPlease review the pending tasks and take action as needed.\n" >> "$GITHUB_OUTPUT"
           printf "\nHave a great day!\n" >> "$GITHUB_OUTPUT"
           printf "EOF\n" >> "$GITHUB_OUTPUT"
 
